--- a/core/templates/core/sop_express.html
+++ b/core/templates/core/sop_express.html
@@ -314,7 +314,7 @@
         document.getElementById('loadingOverlay').classList.add('d-flex');
 
         try {
-            const response = await fetch('/api/sop/generate/', {
+            const response = await fetch('/api/v1/sop/generate/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -447,7 +447,7 @@
         };
 
         try {
-            const response = await fetch('/api/sop/save/', {
+            const response = await fetch('/api/v1/sop/save/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
